--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="magenta">#FF00FF</color>
+    <color name="ball">#FF00FF</color>
+    <color name="paddle">#45AB1B</color>
+
 </resources>
