Only displays Game Over text

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="magenta">#FF00FF</color>
     <color name="ball">#FF00FF</color>
     <color name="paddle">#45AB1B</color>
+    <color name="gameover">#AC1409</color>
 
 </resources>
