--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     android:padding="16dp">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -34,14 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Points: "
-            android:textColor="#330022"
-            android:textSize="18sp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvPoints"
-            android:text="Points: "
+            android:text="Game Over"
             android:textColor="#330022"
             android:textSize="40sp" />
     </LinearLayout>
